# mdingress

./: Cargo.toml  Dockerfile  Justfile  LICENSE  README.md
.github/workflows/: rust.yml
manifests/: kustomization.yaml  mdingress.yaml  namespace.yaml  rbac.yaml
src/: config.rs  main.rs  mdns.rs
