[package]
name = "mdingress"
version = "0.1.0"
edition = "2024"

[dependencies]
eyre = "0.6.12"
futures = "0.3.32"
k8s-openapi = { version = "0.27.0", features = ["latest", "schemars"] }
kube = { version = "3.0.1", features = ["runtime", "derive"] }
schemars = "1.2.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
